Completely refactored project

--- a/API/API.vcxproj.filters
+++ b/API/API.vcxproj.filters
@@ -87,6 +87,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Doxyfile" />
+    <None Include="src\README.md" />
   </ItemGroup>
   <ItemGroup>
     <QtUic Include="src\MainWidget.ui">
