--- a/API/API.vcxproj
+++ b/API/API.vcxproj
@@ -35,6 +35,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Doxyfile" />
+    <None Include="src\README.md" />
   </ItemGroup>
   <ItemGroup>
     <QtUic Include="src\MainWidget.ui" />
