--- a/API/API.vcxproj.filters
+++ b/API/API.vcxproj.filters
@@ -160,6 +160,9 @@
     <ClCompile Include="src\network\SyncObjectProrotype.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\network\SyncObject.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="src\network\SyncObject.h">
