--- a/API/API.vcxproj.filters
+++ b/API/API.vcxproj.filters
@@ -110,6 +110,15 @@
     <ClInclude Include="src\map\SyncMapPrototype.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\core\Game.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\core\Server.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\core\Client.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\memory\registry\AllRegistries.cpp">
@@ -226,9 +235,6 @@
   <ItemGroup>
     <None Include="Doxyfile" />
     <None Include="src\README.md" />
-    <None Include="ClassDiagram.cd" />
-    <None Include="ClassDiagram1.cd" />
-    <None Include="ClassDiagram2.cd" />
   </ItemGroup>
   <ItemGroup>
     <QtUic Include="src\MainWidget.ui">
