--- a/API/API.vcxproj.filters
+++ b/API/API.vcxproj.filters
@@ -119,6 +119,9 @@
     <ClInclude Include="src\core\Client.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\tiles\Ground.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\memory\registry\AllRegistries.cpp">
@@ -200,6 +203,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\map\SyncMapPrototype.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\map\MapDefination.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
