--- a/API/API.vcxproj.filters
+++ b/API/API.vcxproj.filters
@@ -220,6 +220,21 @@
     <ClCompile Include="src\tiles\Water.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\core\Game.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\core\Server.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\core\Client.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\widgets\StartWidget.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\widgets\MapSelectWidget.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="src\network\SyncObject.h">
@@ -249,6 +264,12 @@
     <QtMoc Include="src\map\ServerMap.h">
       <Filter>Header Files</Filter>
     </QtMoc>
+    <QtMoc Include="src\widgets\StartWidget.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="src\widgets\MapSelectWidget.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
   </ItemGroup>
   <ItemGroup>
     <None Include="Doxyfile" />
@@ -256,6 +277,12 @@
   </ItemGroup>
   <ItemGroup>
     <QtUic Include="src\MainWidget.ui">
+      <Filter>Form Files</Filter>
+    </QtUic>
+    <QtUic Include="src\widgets\StartWidget.ui">
+      <Filter>Form Files</Filter>
+    </QtUic>
+    <QtUic Include="src\widgets\MapSelectWidget.ui">
       <Filter>Form Files</Filter>
     </QtUic>
   </ItemGroup>
